# easl

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  shell.nix  syntax.easl  type.easl
easl_derive/: Cargo.toml
easl_derive/src/: lib.rs
src/: ast.rs  easl.pest  lib.rs  main.rs  parse.rs  scan.rs  utils.rs  visitor.rs
src/compiler/: context.rs  mod.rs
src/interpereter/: mod.rs
src/interpreter/: mod.rs
src/parser/: ast.rs  chumsky.rs  easl.pest  mod.rs  tc.rs
src/parser/passes/: comment.rs  mod.rs
src/tc/: mod.rs  variant.rs
