[package]
name = "easl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
miette = { version = "5.9.0", features = ["fancy"] }
palette = "0.7.2"
thiserror = "1.0.40"
